# vertigo_ros

./: README.md
vertigo/datasets/matlab/: dataset_plot.m
vertigo/datasets/newcollege/: newcollege.g2o  newcollege_long.csv  newcollege_short.g2o
vertigo/datasets/simple/: simple004.g2o
vertigo/examples/robustISAM2/: CMakeLists.txt  robustISAM2-2d.cpp  robustISAM2-3d.cpp
vertigo/include/: fullSLAM.h  planarSLAM.h
vertigo/include/gtsam/: AdaptiveLossFunction.h  betweenFactorAdaptive.h  betweenFactorSwitchable.h  outlierProcess.h  priorFactorOutlierProcess.h  shapeParameter.h
vertigo/matlab/: alignData.m  align_slam_to_gt.m  dataset_plot.m  gt_tum.csv  loadData.m  maxTimeAlignment.m  maxYawAngleAlignment.m  rotateTs.m  slam_result_tum.csv
vertigo/python/: run_montecarlo_simulations.py
vertigo/src/: fullSLAM.cpp
vertigo/src/gtsam/: AdaptiveLossFunction.cpp  CMakeLists.txt
